# typst-mac

./: Cargo.toml  cbindgen.toml
Typst/: .gitignore  BridgingHeader.h  carcify.sh
Typst/Typst/: ContentView.swift  PDFPreview.swift  TypstApp.swift
Typst/Typst.xcodeproj/: project.pbxproj
Typst/Typst.xcodeproj/project.xcworkspace/xcuserdata/student.xcuserdatad/: UserInterfaceState.xcuserstate
Typst/Typst.xcodeproj/xcuserdata/student.xcuserdatad/xcschemes/: xcschememanagement.plist
Typst/TypstTests/: TypstTests.swift
Typst/TypstUITests/: TypstUITests.swift  TypstUITestsLaunchTests.swift
src/: lib.rs  world.rs
